--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,18 @@
 name: ci
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+on: [push]
+    
 jobs:
-
   build:
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - name: install
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-
-    - name: build
-      run: dotnet build
-      
-    - name: test
-      run: dotnet test
+      - uses: actions/checkout@v3
+      - name: setup
+        uses: actions/setup-dotnet@v3
+      - name: restore
+        run: dotnet restore
+      - name: build
+        run: dotnet build --configuration Release --no-restore
+      - name: test
+        run: dotnet test --no-restore --verbosity normal
