--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: setup
         uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 7.0.x
       - name: restore
         run: dotnet restore
       - name: build
